envoy.yaml
static_resources:
  listeners:
  - name: main
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: auto
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route: 
                  cluster: web_service
          http_filters:
          - name: envoy.filters.http.jwt_authn
            config:
              providers:
                provider1:
                  forward: true
                  issuer: https://example.com
                  audiences:
                  - example_service
                  remote_jwks:
                    http_uri:
                      uri: https://example.com/jwks.json
                      cluster: example_jwks_cluster
              rules:
                - match:
                    regex: "/health"
                - match:
                    prefix: "/"
                  requires: 
                    provider_name: "provider1"
          - name: envoy.router
            config: {}

  clusters:
  - name: web_service
    connect_timeout: 0.25s
    type: strict_dns # static
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: web_service
        port_value: 80
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
